--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body {
 }
 @font-face {
     font-family: "chinese";
-    src: url('game/font/chinese.ttf');
+    src: url('game/font/chinese.TTF');
 }
 
 </style>
